--- a/.github/workflows/mac-build.yml
+++ b/.github/workflows/mac-build.yml
@@ -1,49 +1,49 @@
-name: 名称：构建Mac版本安装包
+name: 构建Mac版本安装包
 on:
-  # 手动触发打包（推荐）# 手动触发打包（推荐）
+  # 手动触发打包（推荐）
   workflow_dispatch:
-  # 可选：推送到main分支时自动打包，注释掉也不影响# 可选：推送到main分支时自动打包，注释掉也不影响
-  # 推送:# push:
-  # 分支: [ main ]#   branches: [ main ]
+  # 可选：推送到main分支时自动打包，注释掉也不影响
+  # push:
+  #   branches: [ main ]
 
 jobs:
   build-mac:
-    # 使用GitHub的macOS虚拟机（最新版）# 使用GitHub的macOS虚拟机（最新版）
-    runs-on:     运行于: macos-latest
+    # 使用GitHub的macOS虚拟机（最新版）
+    runs-on: macos-latest
     steps:
-      # 步骤1：拉取GitHub仓库中的代码# 步骤1：拉取GitHub仓库中的代码
-      - name:       - name: 拉取项目代码
-        uses:         用途：actions/checkout@v4
+      # 步骤1：拉取GitHub仓库中的代码
+      - name: 拉取项目代码
+        uses: actions/checkout@v4
 
-      # 步骤2：安装Node.js（与本地版本一致，推荐18.x）# 步骤2：安装Node.js（与本地版本一致，推荐18.x）
-      - name:       - name: 安装Node.js 18
-        uses:         用途：actions/setup-node@v4
+      # 步骤2：安装Node.js（与本地版本一致，推荐18.x）
+      - name: 安装Node.js 18
+        uses: actions/setup-node@v4
         with:
           node-version: 18
-          # 缓存npm依赖，加速下次打包# 缓存npm依赖，加速下次打包
+          # 缓存npm依赖，加速下次打包
           cache: 'npm'
 
-      # 步骤3：安装项目依赖# 步骤3：安装项目依赖
-      - name:       - name: 安装npm依赖
-        run:         运行：npm install
-        # 国内镜像加速（可选，避免依赖下载慢）# 国内镜像加速（可选，避免依赖下载慢）
+      # 步骤3：安装项目依赖
+      - name: 安装npm依赖
+        run: npm install
+        # 国内镜像加速（可选，避免依赖下载慢）
         env:
-          ELECTRON_MIRROR:           电子镜像: https://npmmirror.com/mirrors/electron/://npmmirror.com/mirrors/electron/
-          NPM_CONFIG_REGISTRY:           NPM_CONFIG_REGISTRY: https://registry.npmmirror.com/://registry.npmmirror.com/
+          ELECTRON_MIRROR: https://npmmirror.com/mirrors/electron/
+          NPM_CONFIG_REGISTRY: https://registry.npmmirror.com/
 
-      # 步骤4：执行Mac打包命令# 步骤4：执行Mac打包命令
-      - name:       - name: 打包Mac DMG安装包
-        run:         运行: npm run build:mac:mac
+      # 步骤4：执行Mac打包命令
+      - name: 打包Mac DMG安装包
+        run: npm run build:mac
 
-      # 步骤5：上传打包好的DMG文件（供下载）# 步骤5：上传打包好的DMG文件（供下载）
-      - name:       - name: 上传打包产物
-        uses:         用途: actions/upload-artifact@v4
+      # 步骤5：上传打包好的DMG文件（供下载）
+      - name: 上传打包产物
+        uses: actions/upload-artifact@v4
         with:
-          # 产物名称（下载时显示）# 产物名称（下载时显示）
-          name:           名称：rongcheng-mac-tool
-          # 要上传的文件路径（匹配打包后的DMG）# 要上传的文件路径（匹配打包后的DMG）
+          # 产物名称（下载时显示）
+          name: rongcheng-mac-tool
+          # 要上传的文件路径（匹配打包后的DMG）
           path: |
             dist/*.dmg
             dist/*.zip
-          # 产物保留90天（默认30天，可自定义）# 产物保留90天（默认30天，可自定义）
+          # 产物保留90天（默认30天，可自定义）
           retention-days: 90
