--- a/package.json
+++ b/package.json
@@ -1,104 +1,86 @@
 {
-  "name": "rongcheng-waimai-tool",
-  "version": "3.0.10",
-  "description": "荣诚多门店智能管理工具 - 支持多平台门店管理和数据驾驶舱",
+  "name": "rongcheng-shop-multi-tool",
+  "version": "1.0.0",
+  "description": "荣诚商家后台多开工具 - 支持美团/饿了么等9大平台门店批量管理",
   "main": "main.js",
+  "author": "荣诚科技",
+  "license": "MIT",
+  "private": true,
   "scripts": {
-    "prebuild": "node build.js",
-    "build": "electron-builder",
-    "postbuild": "git checkout -- main.js",
     "start": "electron .",
-    "dev": "set NODE_ENV=development && electron .",
-    "postinstall": "electron-builder install-app-deps",
-    "pack": "electron-builder --dir",
-    "dist": "npm run prebuild && electron-builder",
-    "backup": "node backup-restore.js backup",
-    "restore": "node backup-restore.js restore"
+    "dev": "electron . --dev",
+    "build:win": "electron-builder --win --x64",
+    "build:mac": "electron-builder --mac --x64 --arm64",
+    "build:all": "electron-builder --win --mac --x64 --arm64",
+    "pack:mac": "electron-builder --mac --dir",
+    "clean": "rm -rf dist && rm -rf node_modules/.cache"
+  },
+  "electronDownload": {
+    "mirror": "https://npmmirror.com/mirrors/electron/",
+    "platform": "darwin",
+    "arch": ["x64", "arm64"]
   },
   "dependencies": {
-    "@electron-toolkit/utils": "^4.0.0",
+    "electron-store": "^8.1.0",
+    "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "@supabase/supabase-js": "^2.0.0",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^16.0.0",
-    "joi": "^18.0.1",
-    "node-cache": "^5.1.2",
-    "node-fetch": "^2.7.0",
-    "node-schedule": "^2.1.1",
-    "playwright-chromium": "^1.55.1",
-    "puppeteer-core": "^24.22.3",
-    "xlsx": "^0.18.5"
+    "exceljs": "^4.4.0",
+    "joi": "^17.13.3", 
+    "uuid": "^9.0.1",
+    "electron-window-state": "^5.0.3"
   },
   "devDependencies": {
-    "electron": "^22.3.27",
-    "electron-builder": "^24.0.0"
+    "electron": "^28.2.0",
+    "electron-builder": "^24.13.3",
+    "asar": "^3.2.0",
+    "electron-reloader": "^1.2.3"
   },
   "build": {
-    "appId": "com.rongcheng.waimai",
-    "productName": "荣诚多门店智能管理工具",
-    "copyright": "Copyright © 2025 荣诚工作室",
+    "appId": "com.rongcheng.shopmulti",
+    "productName": "荣诚商家多开工具",
+    "publish": null, 
+    "copyright": "Copyright © 2025 ${author}",
     "directories": {
       "output": "dist",
-      "buildResources": "assets"
+      "buildResources": "build"
+    },
+    "asar": true,
+    "compression": "maximum",
+    "mac": {
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64"]
+        }
+      ],
+      "icon": "assets/icon.icns",
+      "hardenedRuntime": true,
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.plist",
+      "gatekeeperAssess": false,
+      "category": "public.app-category.business"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "assets/icon.ico",
+      "requestedExecutionLevel": "highestAvailable"
     },
     "files": [
       "main.js",
       "preload.js",
       "renderer/**/*",
       "assets/**/*",
-      "node_modules/**/*"
+      "node_modules/**/*",
+      "package.json"
     ],
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64",
-            "ia32"
-          ]
-        }
-      ],
-      "icon": "assets/icon.ico",
-      "publisherName": "荣诚科技"
-    },
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "shortcutName": "荣诚多门店智能管理工具"
-    },
-    "mac": {
-      "target": "dmg",
-      "icon": "assets/icon.icns",
-      "category": "public.app-category.business"
-    },
-    "linux": {
-      "target": "AppImage",
-      "icon": "assets/icon.png",
-      "category": "Office"
-    },
-    "extraMetadata": {
-      "SUPABASE_URL": "${SUPABASE_URL}",
-      "SUPABASE_ANON_KEY": "${SUPABASE_ANON_KEY}",
-      "SUPABASE_SERVICE_KEY": "${SUPABASE_SERVICE_KEY}",
-      "ENCRYPTION_KEY": "${ENCRYPTION_KEY}"
+      "installerIcon": "assets/icon.ico",
+      "uninstallerIcon": "assets/icon.ico",
+      "license": "LICENSE.txt",
+      "artifactName": "${productName}-${version}-${arch}-setup.exe"
     }
-  },
-  "keywords": [
-    "外卖",
-    "多开",
-    "商家后台",
-    "门店管理",
-    "数据驾驶舱",
-    "electron"
-  ],
-  "author": {
-    "name": "荣诚信息服务",
-    "email": "support@rongcheng.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rongcheng/waimai-tool.git"
-  },
-  "license": "MIT"
+  }
 }
