--- a/.github/workflows/mac-build.yml
+++ b/.github/workflows/mac-build.yml
@@ -1,49 +1,16 @@
-name: 构建Mac版本安装包
-on:
-  # 手动触发打包（推荐）
-  workflow_dispatch:
-  # 可选：推送到main分支时自动打包，注释掉也不影响
-  # push:
-  #   branches: [ main ]
-
+name: Build Mac App
+on: [push, pull_request]
 jobs:
-  build-mac:
-    # 使用GitHub的macOS虚拟机（最新版）
-    runs-on: macos-latest
+  build:
+    runs-on: macos-latest # 使用 GitHub 提供的 Mac 虚拟机
     steps:
-      # 步骤1：拉取GitHub仓库中的代码
-      - name: 拉取项目代码
-        uses: actions/checkout@v4
-
-      # 步骤2：安装Node.js（与本地版本一致，推荐18.x）
-      - name: 安装Node.js 18
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          # 缓存npm依赖，加速下次打包
-          cache: 'npm'
-
-      # 步骤3：安装项目依赖
-      - name: 安装npm依赖
-        run: npm install
-        # 国内镜像加速（可选，避免依赖下载慢）
-        env:
-          ELECTRON_MIRROR: https://npmmirror.com/mirrors/electron/
-          NPM_CONFIG_REGISTRY: https://registry.npmmirror.com/
-
-      # 步骤4：执行Mac打包命令
-      - name: 打包Mac DMG安装包
-        run: npm run build:mac
-
-      # 步骤5：上传打包好的DMG文件（供下载）
-      - name: 上传打包产物
-        uses: actions/upload-artifact@v4
+          node-version: 20
+      - run: npm install
+      - run: npx electron-builder --mac
+      - uses: actions/upload-artifact@v4
         with:
-          # 产物名称（下载时显示）
-          name: rongcheng-mac-tool
-          # 要上传的文件路径（匹配打包后的DMG）
-          path: |
-            dist/*.dmg
-            dist/*.zip
-          # 产物保留90天（默认30天，可自定义）
-          retention-days: 90
+          name: mac-app
+          path: dist/*.dmg
